Add improvement to RelatedList actions button

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -104,7 +104,7 @@
     "LBL_ADD_CONDITION_GROUP": "Add group",
     "LBL_ADD_EVENT": "Add Event",
     "LBL_ADD_GROUP": "Add Group",
-    "LBL_ADD_MANAGE_MODULES": "Add\/Manage modules",
+    "LBL_ADD_MANAGE_MODULES": "Add/Manage modules",
     "LBL_ADD_MORE_COLUMNS": "Add more columns",
     "LBL_ADD_MORE_FIELDS": "Add more fields",
     "LBL_ADD_NEW_COMMENT": "Add new comment",
@@ -320,7 +320,7 @@
     "LBL_MAX_UPLOAD_SIZE": "Maximum upload size is",
     "LBL_May": "May",
     "LBL_MERGE": "Merge",
-    "LBL_MERGE_RECORDS_DESCRIPTION": "The primary record will be retained after the merge. You can select the column to retain the values.<br \/>The other record will be deleted but the related information will be merged.",
+    "LBL_MERGE_RECORDS_DESCRIPTION": "The primary record will be retained after the merge. You can select the column to retain the values.<br />The other record will be deleted but the related information will be merged.",
     "LBL_MERGE_RECORDS_IN": "Merge records in",
     "LBL_MERGE_SELECT": "Select for merging",
     "LBL_MERGING_CRITERIA_SELECTION": "Merging criteria selection",
@@ -373,14 +373,14 @@
     "LBL_NO_RECORD_SELECTED": "No record selected.",
     "LBL_NO_RELATED": "No related",
     "LBL_NO_SCHEDULED_ACTIVITIES": "No scheduled activities",
-    "LBL_NO_CURRENT_ACTIVITIES": "No current tasks\/ to do's, check your schedule",
+    "LBL_NO_CURRENT_ACTIVITIES": "No current tasks/ to do's, check your schedule",
     "LBL_NO_UPDATES": "No updates",
     "LBL_NO_UPDATES_OR_COMMENTS": "No updates or comments",
     "LBL_Oct": "Oct",
     "LBL_OF": "of",
     "LBL_OF_PRICE": "Price",
     "LBL_ON": "on",
-    "LBL_ON_DEMAND_ADMIN": "Add\/Delete users",
+    "LBL_ON_DEMAND_ADMIN": "Add/Delete users",
     "LBL_OPERATION_NOT_PERMITTED": "Operation not permitted",
     "LBL_OR": "or",
     "LBL_OWNER": "Mine",
@@ -396,7 +396,7 @@
     "LBL_PRE_TAX_TOTAL": "Pre tax total",
     "LBL_PRICING_INFORMATION": "Pricing information",
     "LBL_PRIVACY_POLICY": "Privacy policy",
-    "LBL_PROFILE_PASSWORD": "Profile\/Password",
+    "LBL_PROFILE_PASSWORD": "Profile/Password",
     "LBL_QTY": "Quantity",
     "LBL_UNIT": "Unit",
     "LBL_QTY_IN_STOCK": "Stock",
@@ -425,7 +425,7 @@
     "LBL_SAVE_AS_DRAFT": "Save as draft",
     "LBL_SAVE_AS_FILTER": "Save as filter",
     "LBL_SAVE_FILTER": "Save filter",
-    "LBL_SAVE_MODIFY_FILTER": "Save\/Modify filter",
+    "LBL_SAVE_MODIFY_FILTER": "Save/Modify filter",
     "LBL_SEARCH": "Search",
     "LBL_SEARCH_FOR": "Search for",
     "LBL_SEARCH_IN": "Search in",
@@ -615,8 +615,8 @@
     "Type": "Type",
     "Upcoming Activities": "Calendar - pending",
     "Activity History": "Calendar - done",
-    "Delagated Events\/To Dos": "Delagated Events\/To Dos",
-    "Delegated (overdue) Events\/ToDos": "Delegated (overdue) Events\/ToDos",
+    "Delagated Events/To Dos": "Delagated Events/To Dos",
+    "Delegated (overdue) Events/ToDos": "Delegated (overdue) Events/ToDos",
     "Delegated project tasks": "Delegated project tasks",
     "Delegated (overdue) project tasks": "Delegated (overdue) project tasks",
     "Upcoming Tasks": "Upcoming Tasks",
@@ -676,7 +676,7 @@
     "AddressLevel2": "State",
     "AddressLevel3": "County",
     "AddressLevel4": "Township",
-    "AddressLevel5": "City\/Village",
+    "AddressLevel5": "City/Village",
     "AddressLevel6": "Locality Region",
     "AddressLevel7": "Post Code",
     "AddressLevel8": "Street",
@@ -745,7 +745,7 @@
     "Trade": "Trade",
     "Hotels and Restaurants": "Hotels and Restaurants",
     "Health Care": "Health Care",
-    "Industry \/ Manufacturing": "Industry\/Manufacturing",
+    "Industry / Manufacturing": "Industry/Manufacturing",
     "Uniformed Services": "Uniformed Services",
     "Transport & Logistics": "Transport & Logistics",
     "Technologies": "Technologies",
@@ -754,7 +754,7 @@
     "Voivodeship Office": "Voivodeship Office",
     "Marshal Office": "Marshal Office",
     "District": "Poviat",
-    "City\/Township\/District": "City\/Township\/District",
+    "City/Township/District": "City/Township/District",
     "Social Welfare Centre": "Social Welfare Centre",
     "Water and Sewerage Company": "Water and Sewerage Company",
     "Voivodeship Job Centre": "Voivodeship Job Centre",
@@ -792,8 +792,8 @@
     "Telecommunication": "Telecommunication",
     "Media": "Media",
     "Generate default PDF": "Generate PDF",
-    "LBL_LEFT_PANEL_SHOW_HIDE": "Left panel show\/hide",
-    "LBL_RIGHT_PANEL_SHOW_HIDE": "Right panel show\/hide",
+    "LBL_LEFT_PANEL_SHOW_HIDE": "Left panel show/hide",
+    "LBL_RIGHT_PANEL_SHOW_HIDE": "Right panel show/hide",
     "FL_TOTAL_TIME_H": "Total time [h]",
     "COPY_ADRESS_FROM": "Copy address from:",
     "LBL_WIDGETS_MANAGMENT": "Widgets",
@@ -1001,7 +1001,7 @@
     "LBL_PRICE_AFTER_TAX": "Price with tax",
     "LBL_GLOBAL_TAXS": "Tax from the list of available taxes",
     "LBL_INDIVIDUAL_TAX": "Custom tax",
-    "LBL_GROUP_TAXS": "Tax from products\/services list",
+    "LBL_GROUP_TAXS": "Tax from products/services list",
     "LBL_TAX_FOR_MODULE": "Tax set in module",
     "LBL_REGIONAL_TAX": "Regional tax",
     "LBL_TAX_FOR_ACCOUNT": "Tax for Account",
@@ -1323,14 +1323,15 @@
     "LBL_NO_UPCOMING_PROJECT_TASKS": "No upcoming project tasks",
     "LBL_COMPLETED_PROJECT_TASKS": "Completed project tasks",
     "LBL_NO_COMPLETED_PROJECT_TASKS": "No completed project tasks",
-    "PLL_PLANNED" : "Planned",
-    "PLL_ON_HOLD" : "On hold",
-    "PLL_SUBMITTED_COMMENTS" : "Submitted comments",
-    "PLL_IN_PROGRESSING" : "In progressing",
-    "PLL_IN_APPROVAL" : "In approval",
-    "PLL_COMPLETED" : "Completed",
-    "PLL_CANCELLED" : "Cancelled",
-    "LBL_SELECT_UP_TO_RECORDS": "Select up to %s records"
+    "PLL_PLANNED": "Planned",
+    "PLL_ON_HOLD": "On hold",
+    "PLL_SUBMITTED_COMMENTS": "Submitted comments",
+    "PLL_IN_PROGRESSING": "In progressing",
+    "PLL_IN_APPROVAL": "In approval",
+    "PLL_COMPLETED": "Completed",
+    "PLL_CANCELLED": "Cancelled",
+    "LBL_SELECT_UP_TO_RECORDS": "Select up to %s records",
+    "LBL_MASS_DOWNLOAD": "Mass download"
   },
   "js": {
     "JS_APPROVE": "Approve",
@@ -1548,7 +1549,7 @@
     "JS_WED": "Wed",
     "JS_WEEK": "Week",
     "JS_WEEK_SHORT": "WK",
-    "JS_ADD_EVENT_TASK": "Add Event\/To Do",
+    "JS_ADD_EVENT_TASK": "Add Event/To Do",
     "JS_MORE": "More",
     "JS_TO_REALIZE": "For processing",
     "JS_HISTORY": "History",
