Fixed the translation

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1325,7 +1325,7 @@
     "PLL_PLANNED": "Planned",
     "PLL_ON_HOLD": "On hold",
     "PLL_SUBMITTED_COMMENTS": "Submitted comments",
-    "PLL_IN_PROGRESSING": "In progressing",
+    "PLL_IN_PROGRESSING": "In progress",
     "PLL_IN_APPROVAL": "In approval",
     "PLL_COMPLETED": "Completed",
     "PLL_CANCELLED": "Cancelled",
