IT557 add improvement to check password

--- a/languages/en-US/OSSPasswords.json
+++ b/languages/en-US/OSSPasswords.json
@@ -37,6 +37,7 @@
     "LBL_START_REGISTER": "Register changes",
     "LBL_REGISTER_WARN1": "WARNING!",
     "LBL_REGISTER_WARN2": "Checking below option you agree to register all changes to passwords in modtracker. Only old passwords will be shown, new passwords will still be hidden.",
+    "LBL_WRONG_PASS": "Wrong password",
     "LBL_NULLPASS": "Password cannot be empty.",
     "LBL_PASS_TOOSHORT": "Password is too short.",
     "LBL_PASS_TOOLONG": "Password is too long.",
