--- a/languages/en-US/Users.json
+++ b/languages/en-US/Users.json
@@ -356,7 +356,7 @@
     "PLL_PASSWORD_2FA": "Password + 2FA",
     "BTN_MASS_OFF_2FA": "Mass disable 2FA",
     "LBL_2FA_TOTP_INFO_IN_DEMO": "In demo mode, 2FA is for preview only.",
-    "FL_DEFAULT_SEARCH_MODULE": "Default selected module",
+    "FL_DEFAULT_SEARCH_MODULE": "Default module",
     "FL_OVERRIDE_SEARCH_MODULE": "Force the default selection",
     "LBL_GLOBAL_SEARCH_SETTINGS": "Global search settings"
   },
