--- a/languages/en-US/FInvoice.json
+++ b/languages/en-US/FInvoice.json
@@ -38,6 +38,8 @@
     "PLL_CANCELLED": "Cancelled",
     "PLL_ACCEPTED": "Accepted",
     "LBL_YEAR": "Year",
-    "FL_ISSUE_TIME": "Invoice date"
+    "FL_ISSUE_TIME": "Invoice date",
+    "FL_POTENTIAL": "Potential",
+    "FL_PROJECT": "Project"
   }
 }
