--- a/languages/en-US/FInvoice.json
+++ b/languages/en-US/FInvoice.json
@@ -39,7 +39,7 @@
     "PLL_ACCEPTED": "Accepted",
     "LBL_YEAR": "Year",
     "FL_ISSUE_TIME": "Invoice date",
-    "FL_POTENTIAL": "Potential",
+    "FL_OPPORTUNITY": "Opportunity",
     "FL_PROJECT": "Project"
   }
 }
