Added new field in inventory - Tax in percent

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -474,6 +474,7 @@
     "LBL_TAG_CLOUD": "tag cloud",
     "LBL_TAG_THIS_RECORD": "Tag this record",
     "LBL_TAX": "Tax",
+    "LBL_TAX_IN_PERCENT": "Tax (%)",
     "LBL_TAX_MODE": "Tax mode",
     "LBL_Thu": "Thu",
     "LBL_TO": "To",
