--- a/languages/en-US/Settings/PDF.json
+++ b/languages/en-US/Settings/PDF.json
@@ -160,7 +160,10 @@
     "DEMY": "Demy",
     "ROYAL": "Royal",
     "LBL_STANDARD_TEMPLATES": "Standard templates",
-    "LBL_DYNAMIC_TEMPLATES": "Dynamic templates"
+    "LBL_DYNAMIC_TEMPLATES": "Dynamic templates",
+    "LBL_SELECT_COLUMNS": "Select columns for dynamic templates",
+    "LBL_SAVE_SCHEME": "Save scheme",
+    "LBL_SCHEME_SAVED": "Column scheme was successfully saved."
   },
   "js": {
     "JS_PDF_SAVED_SUCCESSFULLY": "PDF template saved.",
