--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1334,7 +1334,14 @@
     "LBL_MASS_DOWNLOAD": "Mass download",
     "LBL_AMOUNT_TO_RETURN": "Amount to be refunded",
     "LBL_TABLE_TAX_SUMMARY_FOR_CORRECT": "Tax summary for correcting invoices",
-    "LBL_TAX_CORRECT_SUMMARY": "Tax reduction amount"
+    "LBL_TAX_CORRECT_SUMMARY": "Tax reduction amount",
+    "LBL_STANDARD_TEMPLATES": "Standard templates",
+    "LBL_DYNAMIC_TEMPLATES": "Dynamic templates",
+    "LBL_SELECT_COLUMNS": "Select columns for dynamic templates",
+    "LBL_SAVE_SCHEME": "Save scheme",
+    "LBL_SCHEME_SAVED": "Column scheme was successfully saved.",
+    "LBL_STANDARD_TEMPLATES_DESC": "Standard templates are those that have static inventory columns.",
+    "LBL_DYNAMIC_TEMPLATES_DESC": "Dynamic templates are those that contain dynamic inventory columns variable.\nWith dynamic columns, you can chose columns for selected record(s) each time you want to generate pdf or save these columns as a scheme for selected record(s)."
   },
   "js": {
     "JS_APPROVE": "Approve",
