--- a/languages/en-US/Other/Exceptions.json
+++ b/languages/en-US/Other/Exceptions.json
@@ -11,6 +11,7 @@
     "ERR_PASSWORD_HAS_ALREADY_BEEN_USED": "This password has already been used. The system does not allow to use the same password for security reasons.",
     "ERR_USER_EXISTS": "User with the same username and role already exists (%s)",
     "ERR_NOT_ACCESSIBLE": "Access denied",
+    "ERR_DUPLICATE_LOGIN": "The specified login already exists.",
     "ERR_NO_PERMISSIONS_FOR_THE_RECORD": "You don't have the permissions required to view/edit this record. Contact the administrator if you should have the permission to view it.",
     "ERR_CONTENTS_VARIABLE_CANT_CALLED_FUNCTION": "Variable (%s) content cannot be triggered as function",
     "ERR_DUPLICATES_VALUES_FOUND": "Duplicated %s values found",
