--- a/languages/en-US/HelpDesk.json
+++ b/languages/en-US/HelpDesk.json
@@ -5,6 +5,7 @@
     "FL_SERVICE_CONTRACTS_DATE": "SLA expiry date",
     "FL_REPORT_TIME": "Report time",
     "FL_RESPONSE_TIME": "Response time",
+    "FL_HELP_DESK_PARENT": "Parent ticket",
     "PLL_SUBMITTED_COMMENTS": "Submitted comments",
     "PLL_FOR_APPROVAL": "For approval",
     "PLL_TO_CLOSE": "To close",
