--- a/languages/en-US/SSingleOrders.json
+++ b/languages/en-US/SSingleOrders.json
@@ -24,7 +24,6 @@
     "FL_POS": "POS",
     "FL_NUMBER_TABLE": "Table number",
     "FL_NUMBER_SEAT": "Seat number",
-    "FL_STORAGE": "Storage",
     "PLL_DRAFT": "Draft",
     "PLL_IN_REALIZATION": "In realization",
     "PLL_FOR_VERIFICATION": "For verification",
@@ -36,6 +35,6 @@
     "FL_SOURCE": "Source",
     "PLL_MANUAL": "Manual",
     "PLL_SHOP": "Shop",
-    "LBL_STORAGE": "Storage"
+    "FL_STORAGE": "Storage"
   }
 }
