--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1342,7 +1342,8 @@
     "LBL_SAVE_SCHEME": "Save scheme",
     "LBL_SCHEME_SAVED": "Column scheme was successfully saved.",
     "LBL_STANDARD_TEMPLATES_DESC": "Standard templates are those that have static inventory columns.",
-    "LBL_DYNAMIC_TEMPLATES_DESC": "Dynamic templates are those that contain dynamic inventory columns variable.\nWith dynamic columns, you can chose columns for selected record(s) each time you want to generate pdf or save these columns as a scheme for selected record(s)."
+    "LBL_DYNAMIC_TEMPLATES_DESC": "Dynamic templates are those that contain dynamic inventory columns variable.\nWith dynamic columns, you can chose columns for selected record(s) each time you want to generate pdf or save these columns as a scheme for selected record(s).",
+    "LBL_FOR_THE_PORTAL": "For the portal"
   },
   "js": {
     "JS_APPROVE": "Approve",
