Added editing of charts from filter

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1163,6 +1163,7 @@
     "LBL_NEW_ACCOUNTS": "New Accounts",
     "LBL_NEGLECTED_ACCOUNTS": "Neglected Accounts",
     "LBL_ADD_CHART_FILTER": "Add chart from filter",
+    "LBL_EDIT_CHART_FILTER": "Edit chart from filter",
     "LBL_PIE_CHART": "Pie chart",
     "LBL_DONUT_CHART": "Donut chart",
     "LBL_AXIS_CHART": "Axis chart",
