Add Kanban Board

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1491,7 +1491,8 @@
     "LBL_MONTHLY": "Monthly",
     "LBL_YEARLY": "Yearly",
     "LBL_USER_AGENT": "User agent",
-    "LBL_LIMIT_INFO": "The history shows only the last %s entries, the full list is available in the admin panel."
+    "LBL_LIMIT_INFO": "The history shows only the last %s entries, the full list is available in the admin panel.",
+    "LBL_VIEW_KANBAN": "Kanban"
   },
   "js": {
     "JS_APPROVE": "Approve",
