--- a/languages/en-US/Settings/LayoutEditor.json
+++ b/languages/en-US/Settings/LayoutEditor.json
@@ -206,7 +206,8 @@
     "LBL_RCV_ALL": "All filters from the module",
     "LBL_FILTERS_FROM_MODULE": "Filters from the module",
     "LBL_ANONYMIZATION_TARGET": "Anonymization",
-    "LBL_DUPLICATES_VALUES_FOUND": "Duplicate values found"
+    "LBL_DUPLICATES_VALUES_FOUND": "Duplicate values found",
+    "LBL_FIELD_ICON": "Icon"
   },
   "js": {
     "JS_BLOCK_NAME_EXISTS": "Block Name already exists",
