--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -170,6 +170,7 @@
     "LBL_COPY_BILLING_ADDRESS": "Billing address",
     "LBL_COPY_SHIPPING_ADDRESS": "Shipping address",
     "LBL_CREATE": "Create",
+    "LBL_CREATEDHELPDESK": "Create a ticket",
     "LBL_CREATED_ON": "Created on",
     "LBL_CREATE_NEW": "Create new",
     "LBL_CREATE_NEW_FILTER": "Create new filter",
@@ -389,6 +390,7 @@
     "LBL_OF_PRICE": "Price",
     "LBL_ON": "on",
     "LBL_ON_DEMAND_ADMIN": "Add/Delete users",
+    "LBL_OPENHELPDESK": "Open a ticket",
     "LBL_OPERATION_NOT_PERMITTED": "Operation not permitted",
     "LBL_OR": "or",
     "LBL_OWNER": "Owner",
