Improved password uitype

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1494,7 +1494,12 @@
     "LBL_YEARLY": "Yearly",
     "LBL_USER_AGENT": "User agent",
     "LBL_LIMIT_INFO": "The history shows only the last %s entries, the full list is available in the admin panel.",
-    "LBL_VIEW_KANBAN": "Kanban"
+    "LBL_VIEW_KANBAN": "Kanban",
+    "LBL_PWD_VALIDATE": "Verify the password",
+    "LBL_PWD_AUTO_GENERATE": "Generate a password",
+    "LBL_PWD_GET": "Load password",
+    "LBL_PWD_CLIPBOARD_DBCLICK": "Double click to get the password",
+    "LBL_PWD_USER_PASSWORD_OK": "Password complies with the system requirements."
   },
   "js": {
     "JS_APPROVE": "Approve",
@@ -1951,6 +1956,12 @@
     "JS_CANT_CLOSE_NEW_RECROD": "You cannot close a new ticket",
     "JS_MEETING_URL_CHANGED": "Meeting URL has changed",
     "JS_ENTER_A_REASON": "Enter a reason",
-    "JS_LACK_INFORMATION_ABOUT_RECORD": "There is no information about the record to be changed"
+    "JS_LACK_INFORMATION_ABOUT_RECORD": "There is no information about the record to be changed",
+    "JS_PWD_RIDICULOUS": "Ridiculous",
+    "JS_PWD_VERY_WEAK": "Very weak",
+    "JS_PWD_WEAK": "Weak",
+    "JS_PWD_MEDIUM": "Medium",
+    "JS_PWD_STRONG": "Strong",
+    "JS_PWD_VERY_STRONG": "Very strong"
   }
 }
