--- a/languages/en-US/Settings/Password.json
+++ b/languages/en-US/Settings/Password.json
@@ -37,6 +37,9 @@
     "LBL_ENCRYPTION_WAITING": "Password encryption waiting to start",
     "LBL_PASSWORD_SETTING_WARNING": "Users with passwords older than those specified in the scope may lose the ability to log in. It is highly recommended to reset passwords before making modifications",
     "LBL_ENCRYPT_DESCRIPTION": "The encryption mechanism in the system is used to encrypt sensitive data in the database. In order to enable encryption you have to define the method of encryption and enter an encryption key. For some of the encryption methods entering a vector is required. The encryption key is saved in the following file: \\config\\SecurityKeys.php, and the vector can be found in the database. These parameters are required to decrypt the data.To decrypt all passwords, select 'None' in the 'Encryption method'",
+    "LBL_ENCRYPT_MODULES_DESC": "The encryption mechanism in the system is used to encrypt sensitive data in the database. In order to enable encryption you have to define the method of encryption and enter an encryption key. For some of the encryption methods entering a vector is required. To decrypt all passwords, select 'None' in the 'Encryption method'",
+    "LBL_ENCRYPT_MODULE_EMPTY": "No encryption modules",
+    "LBL_MODULE": "Module",
     "LBL_RECOMENDED_METHODS": "Recommended encryption methods",
     "LBL_OTHER_METHODS": "Other encryption methods",
     "LBL_PASSWORD_CHANGE_RULES": "Password change rules",
