--- a/languages/en-US/Settings/Password.json
+++ b/languages/en-US/Settings/Password.json
@@ -46,6 +46,8 @@
     "LBL_TIME_TO_CHECK_PWNED": "How often to check during login if the password is in the stolen passwords database (days)",
     "LBL_NO_REGISTER_ENCRYPTION": "Encryption using this method is not supported by the system",
     "LBL_PASSWORD_LENGTH_IS": "Vector length must be %s characters",
-    "LBL_DISABLE_ENCRYPTION": "The encryption mechanism will be disabled the next time the cron is triggered"
+    "LBL_DISABLE_ENCRYPTION": "The encryption mechanism will be disabled the next time the cron is triggered",
+    "LBL_SETTINGS_ENCRYPTION": "Settings",
+    "LBL_MODULES_ENCRYPTION": "Modules"
   }
 }
