Improved panel to manage RBL - extended configuration

--- a/languages/en-US/Settings/MailRbl.json
+++ b/languages/en-US/Settings/MailRbl.json
@@ -99,10 +99,15 @@
     "LBL_PUBLIC_BLACK_LIST": "Black list of IP addresses",
     "LBL_PUBLIC_WHITE_LIST": "White list of IP addresses",
     "LBL_IP_EXISTING_IN_RBL": "IP address %s exists in %s, cancel the existing report in order to add a new one.",
-    "LBL_BTN_ACCEPT_AUTOMATICALLY": "Accept automatically",
-    "LBL_BTN_ACCEPT_MANUALLY": "Accept manually",
-    "LBL_BTN_SEND_AUTOMATICALLY": "Send automatically",
-    "LBL_BTN_SEND_MANUALLY": "Send manually",
+    "BTN_RBL_CONFIG": "RBL (Realtime Blackhole List) configuration",
+    "LBL_ACCEPT_AUTOMATICALLY": "Accept automatically",
+    "LBL_ACCEPT_AUTOMATICALLY_DESC": "By default each RBL (Realtime Blackhole List) report is added to a list of reports to be verified. When this option is enabled all reports will be accepted right away and added to the list to be sent. We recommend manually verifying all reports to avoid queueing messages accidentally or incorrectly. ",
+    "LBL_SEND_REPORT_AUTOMATICALLY": "Send automatically",
+    "LBL_SEND_REPORT_AUTOMATICALLY_DESC": "A parameter that enables automatic sending of the report to the central RBL database (Realtime Blackhole List) after validating the e-mail message. Reports to the whitelist send only the headers of the message, reports to the blacklist send the entire e-mail. The CRM system can run without any problems without sending reports.",
+    "LBL_ACTIVATE_RBL_LIST": "Check the sender on the email list in the mail client",
+    "LBL_ACTIVATE_RBL_LIST_DESC": "Enabling this option will slow down loading emails depending on the connection speed and the email server. Once the sender is verified the system will display (by changing the background color) whether the sender is trusted or not.",
+    "LBL_ACTIVATE_RBL_DETAIL": "Check the sender in the message preview in the mail client",
+    "LBL_ACTIVATE_RBL_DETAIL_DESC": "Enabling this option will cause the mail preview to display a bar that informs whether the sender is trusted or has been blacklisted locally/publicly.",
     "LBL_SYNCH_PAID_FEATURE": "Synchronization with the public RBL server (rbl-block.yetiforce.com, rbl-allow.yetiforce.com) is a paid feature. In order to activate the synchronization and to be constantly updated with new hazardous mail servers please go to %s"
   },
   "js": {
