--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1500,7 +1500,9 @@
     "LBL_PWD_GET": "Load password",
     "LBL_PWD_CLIPBOARD_DBCLICK": "Double click to get the password",
     "LBL_PWD_USER_PASSWORD_OK": "Password complies with the system requirements.",
-    "LBL_QUICK_EXPORT_INFO": "The fields from the current list view will be exported if no fields are selected"
+    "LBL_QUICK_EXPORT_INFO": "The fields from the current list view will be exported if no fields are selected",
+	"LBL_MASS_EDIT_INCLUDE": "Include",
+    "LBL_MASS_EDIT_INCLUDE_INFO": "Checking the field will result in adding the values to the already existing ones"
   },
   "js": {
     "JS_APPROVE": "Approve",
