--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1501,8 +1501,9 @@
     "LBL_PWD_CLIPBOARD_DBCLICK": "Double click to get the password",
     "LBL_PWD_USER_PASSWORD_OK": "Password complies with the system requirements.",
     "LBL_QUICK_EXPORT_INFO": "The fields from the current list view will be exported if no fields are selected",
-	"LBL_MASS_EDIT_INCLUDE": "Include",
-    "LBL_MASS_EDIT_INCLUDE_INFO": "Checking the field will result in adding the values to the already existing ones"
+    "LBL_MASS_EDIT_INCLUDE": "Include",
+    "LBL_MASS_EDIT_INCLUDE_INFO": "Checking the field will result in adding the values to the already existing ones",
+    "LBL_NOT_OWNED_BY_CREATOR": "Not owned by creator"
   },
   "js": {
     "JS_APPROVE": "Approve",
