--- a/languages/en-US/Settings/LayoutEditor.json
+++ b/languages/en-US/Settings/LayoutEditor.json
@@ -216,7 +216,7 @@
     "LBL_WSA_VISIBILITY": "Visibility",
     "LBL_WSA_VISIBILITY_DEFAULT": "According to the field configuration",
     "LBL_LOGGED_CONTACT": "Contact currently logged in",
-    "LBL_ACTIVE_ACCOUNT": "Account currently active",
+    "LBL_ACCOUNT_ON_CONTACT": "Account assigned to contact",
     "LBL_ACCOUNT_LOGGED_CONTACT": "Account of contact currently logged in"
   },
   "js": {
