Added minor improvement

--- a/languages/en-US/Settings/LayoutEditor.json
+++ b/languages/en-US/Settings/LayoutEditor.json
@@ -74,10 +74,10 @@
     "Related1M": "Related field 1:M",
     "LBL_DISPLAY_TYPE": "Field type",
     "LBL_DISPLAY_TYPE_1": "Field visible everywhere",
-    "LBL_DISPLAY_TYPE_2": "Field visible only in preview, not editable",
+    "LBL_DISPLAY_TYPE_2": "Field visible only in preview",
     "LBL_DISPLAY_TYPE_3": "Field visible only in list view",
-    "LBL_DISPLAY_TYPE_4": "Field visible only during creating and in preview, cannot be modified",
-    "LBL_DISPLAY_TYPE_9": "Field visible everywhere, read only in editing",
+    "LBL_DISPLAY_TYPE_4": "Field visible only in creating and in preview, cannot be modified",
+    "LBL_DISPLAY_TYPE_9": "Field visible everywhere, hidden in creating and editing",
     "LBL_DISPLAY_TYPE_10": "Field visible everywhere, not editable",
     "LBL_HELP_INFO": "Help icon",
     "LBL_GENERATED_TYPE": "Basic field",
