Changed the label.

--- a/languages/en-US/Settings/LayoutEditor.json
+++ b/languages/en-US/Settings/LayoutEditor.json
@@ -69,9 +69,8 @@
     "LBL_HIDDEN": "Hidden",
     "LBL_RELATION_VALUES": "Select modules",
     "LBL_FIELD_NAME": "Field name",
-    "LBL_FIELD_TYPE": "Table",
-    "LBL_FIELD_TYPE0": "Basic (eg. vtiger_account)",
-    "LBL_FIELD_TYPE1": "Additional (eg. vtiger_accountcf)",
+    "LBL_TABLE": "Table",
+    "LBL_FIELD_TYPE": "Field type",
     "Editor": "WYSIWYG Editor",
     "Related1M": "Related field 1:M",
     "LBL_DISPLAY_TYPE": "Visibility",
