--- a/languages/en-US/Settings/YetiForce.json
+++ b/languages/en-US/Settings/YetiForce.json
@@ -7,8 +7,8 @@
     "LBL_REGISTER": "Register",
     "LBL_REGISTERED": "Registration successful",
     "LBL_REGISTRATION_KEY": "Registration key",
-    "LBL_REGISTRATION_OFFLINE_DESC": "To register a version of the system that has no access to the Internet send an email to %s with the following data",
-    "LBL_REGISTRATION_OFFLINE_EXAMPLE": "Subject: YetiForce offline registration\n\nMessage:\nCRM registration:\nCompany name or first and last name:\nCountry:\nCity:\nThe number of employees of the company:\nYour company's website:\nProduct key: %s \nAPP ID: %s\nVersion: %s",
+    "LBL_REGISTRATION_OFFLINE_DESC": "In order to register a system that does not have access to the Internet, please send an email to %s together with the entity's data.",
+    "LBL_REGISTRATION_OFFLINE_EXAMPLE": "Subject: YetiForce offline registration\n\nMessage:\nCRM registration:\nCompany name or first and last name: %s\nCountry: %s\nCity: %s\nThe number of employees of the company: %s\nYour company's website: %s\nProduct key: %s \nAPP ID: %s\nVersion: %s",
     "LBL_SUPPLIERS": "Suppliers",
     "LBL_INVALID_OFFLINE_KEY": "Entered incorrect key",
     "LBL_ONLINE_REGISTRATION_FAILED": "Error during registration.",
