Added minor improvements

--- a/languages/en-US/Settings/LayoutEditor.json
+++ b/languages/en-US/Settings/LayoutEditor.json
@@ -219,7 +219,8 @@
     "LBL_WSA_VISIBILITY_DEFAULT": "Inherits from field visibility",
     "LBL_LOGGED_CONTACT": "Contact currently logged in",
     "LBL_ACCOUNT_ON_CONTACT": "Account assigned to contact",
-    "LBL_ACCOUNT_LOGGED_CONTACT": "Account of contact currently logged in"
+    "LBL_ACCOUNT_LOGGED_CONTACT": "Account of contact currently logged in",
+    "LBL_DISABLE_FIELD": "Disable the field"
   },
   "js": {
     "JS_BLOCK_NAME_EXISTS": "Block Name already exists",
