Improved disabling of fields

--- a/languages/en-US/Settings/LayoutEditor.json
+++ b/languages/en-US/Settings/LayoutEditor.json
@@ -256,6 +256,7 @@
     "JS_SAVE_CHANGES": "Changes saved successfully.",
     "JS_NOTIFY_COPY_TEXT": "Copied to clipboard",
     "JS_NOTIFY_COPY_TITLE": "Text",
-    "JS_EXIST_PICKLIST_NAME": "This name is already used. Do you want to save it as shared picklist?"
+    "JS_EXIST_PICKLIST_NAME": "This name is already used. Do you want to save it as shared picklist?",
+    "JS_ARE_YOU_SURE_YOU_WANT_TO_INACTIVE_FIELD": "Are you sure that you want to disable the field?"
   }
 }
