--- a/languages/en-US/Settings/AutomaticAssignment.json
+++ b/languages/en-US/Settings/AutomaticAssignment.json
@@ -28,7 +28,31 @@
     "LBL_SMOWNERS_INFO": "The list of pre-assigned users is created from the below users, groups. This user list is created only if there are no users selected from roles.",
     "LBL_ASSIGN_INFO": "Set default Assigned To. The value set here will be assigned to the record when the user, who was assigned, can not be found.",
     "LBL_CONDITIONS_INFO": "Set record search conditions. In order to select one user from the available user list, the system counts the number of records assigned to the user in the module. The user with the lowest number of records is assigned to the record.",
-    "LBL_ROLEID_INFO": "Set one of the following modes: SYSTEM - user by such mechanisms as workflows tasks and handlers; NON-SYSTEM –  allows to assign a record manually by the user."
+    "LBL_ROLEID_INFO": "Set one of the following modes: SYSTEM - user by such mechanisms as workflows tasks and handlers; NON-SYSTEM –  allows to assign a record manually by the user.",
+    "BL_BASIC_DATA": "Basic data",
+    "BL_CONDITIONS": "Conditions for the record",
+    "BL_ASSIGN_USERS": "Users to be assigned",
+    "BL_USER_SELECTION_CONDITIONS": "Conditions for user selection",
+    "FL_RECORD_CONDITIONS": "Conditions for the record",
+    "FL_MEMBERS": "Members",
+    "FL_DEFAULT_ASSIGN": "Default",
+    "LBL_DEFAULT_ASSIGN_DEC": "If none of the selected members meets the assignment requirements a default element will be assigned.",
+    "FL_METHOD": "Method",
+    "FL_RECORD_LIMIT": "Entry limit",
+    "LBL_RECORD_LIMIT_DESC": "The entry limit defines the maximum number of records assigned to users.\n 0 - takes into consideration limits defined in user configuration",
+    "FL_CRITERIA_FOR_COUNTING_RECORDS": "Record counting conditions",
+    "PLL_LOAD_BALANCED": "Load balanced",
+    "PLL_ROUND_ROBIN": "Round robin",
+    "FL_WORKFLOW": "Available in workflow",
+    "FL_HANDLER": "Active - Before save",
+    "LBL_HANDLER_DESC": "The option activates automatic record assignment only for newly created records before they are created.",
+    "FL_MANUAL": "Available from GUI",
+    "FL_MODULE_NAME": "Module name",
+    "FL_SUBJECT": "Subject",
+    "FL_STATE": "State",
+    "PLL_ACTIVE": "Active",
+    "PLL_INACTIVE": "Inactive",
+    "LBL_DUPLICATE": "Duplicate.\nThe subject of the entry must be unique within the module."
   },
   "js": {
     "JS_STATE_CONFIRMATION": "Are you sure you want to change record state?",
