Added alert for old Password module panel

--- a/languages/en-US/OSSPasswords.json
+++ b/languages/en-US/OSSPasswords.json
@@ -81,7 +81,8 @@
     "LBL_CopyToClipboardTitle": "Copy password to clipboard",
     "LBL_NotifPassCopied": "Password has been copied to clipboard",
     "LBL_NotifPassTitle": "Password",
-    "FL_MULTICOMPANY": "Department"
+    "FL_MULTICOMPANY": "Department",
+    "LBL_PASSWORD_ABANDONED": "The password module related to this panel has been dropped and will be removed in the next version. Consider migrating your data to the new password module."
   },
   "js": {
     "LBL_NotifPassCopied": "Password has been copied to clipboard",
