--- a/languages/en-US/Other/EventHandler.json
+++ b/languages/en-US/Other/EventHandler.json
@@ -11,6 +11,8 @@
     "IGRNC_IGRNEXIST_HANDLER": "Duplicate Goods Received Note Correction",
     "IGRNC_IGRNEXIST_HANDLER_DESC": "Block record adding/editing when the same Goods Received Note Correction already exists.",
     "OSSTIMECONTROL_TIMECONTROL_HANDLER": "Working time validation, it cannot exceed 24 hours",
-    "OSSTIMECONTROL_TIMECONTROL_HANDLER_DESC": "Work time limited to 24 hours"
+    "OSSTIMECONTROL_TIMECONTROL_HANDLER_DESC": "Work time limited to 24 hours",
+    "VTIGER_AUTOASSIGN_HANDLER": "Automatic record assignment",
+    "VTIGER_AUTOASSIGN_HANDLER_DESC": "Modifying the owner of a record before its creation"
   }
 }
