Added minor improvement

--- a/languages/en-US/Other/EventHandler.json
+++ b/languages/en-US/Other/EventHandler.json
@@ -12,6 +12,50 @@
     "IGRNC_IGRNEXIST_HANDLER_DESC": "Block record adding/editing when the same Goods Received Note Correction already exists.",
     "OSSTIMECONTROL_TIMECONTROL_HANDLER": "Working time validation, it cannot exceed 24 hours",
     "OSSTIMECONTROL_TIMECONTROL_HANDLER_DESC": "Work time limited to 24 hours",
+    "API_CARDDAV_HANDLER": "CardDAV",
+    "API_CARDDAV_HANDLER_DESC": "",
+    "API_CALDAV_HANDLER": "CalDAV",
+    "API_CALDAV_HANDLER_DESC": "",
+    "VTIGER_WORKFLOW_HANDLER": "Workflow",
+    "VTIGER_WORKFLOW_HANDLER_DESC": "System Workflow",
+    "MODTRACKER_MODTRACKERHANDLER_HANDLER": "ModTracker",
+    "MODTRACKER_MODTRACKERHANDLER_HANDLER_DESC": "Changes history",
+    "VTIGER_RECORDFLOWUPDATER_HANDLER": "Record flow updater",
+    "VTIGER_RECORDFLOWUPDATER_HANDLER_DESC": "",
+    "PROJECT_PROJECTHANDLER_HANDLER": "Project: Update progress",
+    "PROJECT_PROJECTHANDLER_HANDLER_DESC": "",
+    "CALENDAR_CALENDARHANDLER_HANDLER": "Complete calendar fields",
+    "CALENDAR_CALENDARHANDLER_HANDLER_DESC": "",
+    "PROJECTTASK_PROJECTTASKHANDLER_HANDLER": "ProjectTask: Update progress",
+    "PROJECTTASK_PROJECTTASKHANDLER_HANDLER_DESC": "",
+    "VTIGER_RECORDSTATUSHISTORY_HANDLER": "Record status times",
+    "VTIGER_RECORDSTATUSHISTORY_HANDLER_DESC": "",
+    "PRODUCTS_CALCULATIONS_HANDLER": "Commission rate updater",
+    "PRODUCTS_CALCULATIONS_HANDLER_DESC": "",
+    "SSALESPROCESSES_FINANCES_HANDLER": "Sales processes probability",
+    "SSALESPROCESSES_FINANCES_HANDLER_DESC": "",
+    "VTIGER_MEETINGS_HANDLER": "Meeting Url",
+    "VTIGER_MEETINGS_HANDLER_DESC": "",
+    "VTIGER_AUTOFILLIBAN_HANDLER": "Auto fill IBAN",
+    "VTIGER_AUTOFILLIBAN_HANDLER_DESC": "",
+    "SERVICECONTRACTS_SERVICECONTRACTSHANDLER_HANDLER": "Tracking unit & calculate progress",
+    "SERVICECONTRACTS_SERVICECONTRACTSHANDLER_HANDLER_DESC": "",
+    "VTIGER_MULTIREFERENCEUPDATER_HANDLER": "Multireference fields update",
+    "VTIGER_MULTIREFERENCEUPDATER_HANDLER_DESC": "",
+    "PAYMENTSIN_PAYMENTSINHANDLER_HANDLER": "Status Updater: Single orders, Invoice, Invoice proforma",
+    "PAYMENTSIN_PAYMENTSINHANDLER_HANDLER_DESC": "",
+    "APPROVALSREGISTER_APPROVALS_HANDLER": "Approvals register updater",
+    "APPROVALSREGISTER_APPROVALS_HANDLER_DESC": "",
+    "VTIGER_FILES_HANDLER": "File fields handling",
+    "VTIGER_FILES_HANDLER_DESC": "",
+    "QUEUE_QUEUE_HANDLER": "Queue updater",
+    "QUEUE_QUEUE_HANDLER_DESC": "",
+    "OSSPASSWORDS_SECURE_HANDLER": "Password updater",
+    "OSSPASSWORDS_SECURE_HANDLER_DESC": "Protects your password when displaying in history",
+    "ISTORAGES_RECALCULATESTOCKHANDLER_HANDLER": "Recalculate stock",
+    "ISTORAGES_RECALCULATESTOCKHANDLER_HANDLER_DESC": "Calculation of stock levels",
+    "OPENSTREETMAP_OPENSTREETMAPHANDLER_HANDLER": "Save geographical coordinates",
+    "OPENSTREETMAP_OPENSTREETMAPHANDLER_HANDLER_DESC": "",
     "VTIGER_AUTOASSIGN_HANDLER": "Automatic record assignment",
     "VTIGER_AUTOASSIGN_HANDLER_DESC": "Modifying the owner of a record before its creation"
   }
