Improved the translation

--- a/languages/en-US/OSSPasswords.json
+++ b/languages/en-US/OSSPasswords.json
@@ -82,7 +82,7 @@
     "LBL_NotifPassCopied": "Password has been copied to clipboard",
     "LBL_NotifPassTitle": "Password",
     "FL_MULTICOMPANY": "Department",
-    "LBL_PASSWORD_ABANDONED": "The password module related to this panel has been dropped and will be removed in the next version. Consider migrating your data to the new password module."
+    "LBL_PASSWORD_ABANDONED": "The password module related to this panel is outdated and will be removed in the next version of the system. Please consider migrating your data to the new passwords module."
   },
   "js": {
     "LBL_NotifPassCopied": "Password has been copied to clipboard",
