--- a/languages/en-US/Other/EventHandler.json
+++ b/languages/en-US/Other/EventHandler.json
@@ -42,7 +42,7 @@
     "SERVICECONTRACTS_SERVICECONTRACTSHANDLER_HANDLER_DESC": "",
     "VTIGER_MULTIREFERENCEUPDATER_HANDLER": "Multireference fields update",
     "VTIGER_MULTIREFERENCEUPDATER_HANDLER_DESC": "",
-    "PAYMENTSIN_PAYMENTSINHANDLER_HANDLER": "Status Updater: Single orders, Invoice, Invoice proforma",
+    "PAYMENTSIN_PAYMENTSINHANDLER_HANDLER": "Status Updater: Single orders, Invoice, Proforma invoice",
     "PAYMENTSIN_PAYMENTSINHANDLER_HANDLER_DESC": "",
     "APPROVALSREGISTER_APPROVALS_HANDLER": "Approvals register updater",
     "APPROVALSREGISTER_APPROVALS_HANDLER_DESC": "",
