--- a/languages/en-US/CustomView.json
+++ b/languages/en-US/CustomView.json
@@ -7,7 +7,6 @@
     "LBL_CUSTOM_RELATION_COLUMN": "Relationship as a custom column",
     "LBL_CUSTOM_RELATION_COLUMN_DESC": "Filter the current list of records based on relationships and related records that meet specified criteria.",
     "LBL_CUSTOM_CONDITIONS": "Conditions for filtering related records",
-    "LBL_CUSTOM_CONDITIONS_DESC": "Filter the current list of records based on relationships and related records that meet specified criteria.\nFailure to set conditions results in showing lists of records with at least one binding.",
-    "ccc": "Advanced custom view conditions"
+    "LBL_CUSTOM_CONDITIONS_DESC": "Filter the current list of records based on relationships and related records that meet specified criteria.\nFailure to set conditions results in showing lists of records with at least one binding."
   }
 }
